# arthor-image-service

./: .env.example  .gitignore  AGENTS.md  README.md  conftest.py  handoff-20260530-0708.md  pyproject.toml  pytest.ini  system.yaml
.cursor/: builder-os.json  builder-os.run-result.schema.json
agent-control/: dev-launch-ledger.md  hero-pod-status.md  next-orchestrator-brief.md  slice-status.md
app/: __init__.py  config.py  main.py  runtime.py
db/: __init__.py  pool.py
docs/: builder-os-folder-contract.md  db-schema-handoff.md  migrations.md  payload-schema.v1.json  retention.md
packet/: PACKET.md  SPEC.md
plan/: AGENT-MEDIA-CONSUMER.md  ASSET-ANALYZE-CONSUMER.md  ASSET-PACK-CONSUMER.md  CONTEXT.md  CROSS-REPO-HANDOFF-INDEX.md  HANDOFF-HERO-BENEFIT-FIRST.md  HANDOFF-HERO-CORPUS-CANARY-GRID.md  HANDOFF-HERO-CORPUS-LOCKIN.md  HANDOFF-HERO-NEXT-AGENT.md  HANDOFF-HERO-PROMPT-PIPELINE.md  HANDOFF-HERO-TASTE-CORPUS.md  HANDOFF-HERO-VISUAL-STRATEGY.md  HANDOFF-IMAGE-SERVICE-COMPLETION.md  HANDOFF-VERTICAL-PROMPTS-AND-USER-ASSETS.md  HANDOFF-W21-H-DEPLOY-SMOKE.md  HANDOFF-W21-H-HERO-CANDIDATES.md  HERO-CANDIDATES-CONSUMER.md  ORCHESTRATOR.md  PLACEMENTS-CONSUMER.md  RESEARCH-BRIEF-w21-image-pipeline.md  deep-research-report (18).md  deep-research-report (20).md  plan.md
scripts/: hero_cohort_eval.py  hero_quality_batch.py  import_cohort_to_corpus.py  send_request.py
slices/: README.md  conftest.py
tests/: __init__.py  _hero_fake_pool.py  conftest.py  test_hero_candidates.py  test_hero_desktop_seed.py  test_hero_industry_prompts.py  test_hero_post_checks.py  (+10 more)
(+387 files in other folders)
